# Krpc

./: CMakeLists.txt  README.md
.cache/clangd/index/: Kclient.cc.004E024040C54795.idx  KrpcLogger.h.997B6B99EEFA4B8B.idx  Krpcapplication.cc.CF0E299711952A7E.idx  Krpcapplication.h.451069E71AA473A5.idx  Krpcchannel.cc.352D0DD0DE2961D0.idx  Krpcchannel.h.F4989E8975EC0E59.idx  Krpcconfig.cc.13AA563C02EC93D1.idx  Krpcconfig.h.83A859EEA669209E.idx  Krpccontroller.cc.6B867118F29E24DE.idx  Krpccontroller.h.9DBC7A629CE62111.idx  Krpcheader.pb.cc.E191F6DB194235AC.idx  Krpcheader.pb.h.3F6676A04D095DC4.idx  Krpcprovider.cc.7737BA702153EE1F.idx  Krpcprovider.h.4B16A045FD5457E8.idx  Kserver.cc.880883EBC218D3D9.idx  calluserservice.cc.6D0BABF8EBFE52FA.idx  user.pb.cc.07D911BBC41DB7BD.idx  user.pb.cc.0ED063A5A4E2EE0D.idx  user.pb.h.125F7930D483B11E.idx  user.pb.h.8341DFE277B45CCB.idx  userservice.cc.5E55378A1456DBC1.idx  zookeeperutil.cc.CFF5068674E2E13F.idx  zookeeperutil.h.026243897788920F.idx
AAA/: 1.cpp  MemoryPool.cpp  a.out
AAA/protobuf/: 1.cpp  a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
example/callee/: CMakeLists.txt  Kserver.cc
example/caller/: CMakeLists.txt  Kclient.cc
example2/: user.pb.cc  user.pb.h  user.proto
example2/callee/: CMakeLists.txt  userservice.cc
example2/caller/: CMakeLists.txt  calluserservice.cc
include/: Krpcprovider.h
src/: CMakeLists.txt  Krpcapplication.cc  Krpcchannel.cc  Krpcconfig.cc  Krpcprovider.cc  zookeeperutil.cc
src/include/: Krpcchannel.h  Krpcprovider.h
